# hython-itwinai-plugin

./: .gitignore  AUTHORS.md  CITATION.cff  Dockerfile  README.md  dynamic_inputs.yaml  pyproject.toml  run_ray_container.sh  slurm_config.yaml  slurm_ray.sh  slurm_ray_container.sh  slurm_vega_1x4.sh  slurm_vega_mini.sh  static_inputs.yaml  target_variables.yaml  vega_ray_container.sh
.github/workflows/: container-ci.yaml  lint.yml  pytest.yaml
ci/: dagger.json
configuration_files/: juwels_training.yaml  lumi_training.yaml  scaling_test_vega.yaml  training.yaml  vega_training.yaml
env-files/: Dockerfile  jupyter.Dockerfile  rocm.def
installation-scripts/: horovod-deepspeed-JSC.slurm  install-horovod-deepspeed-cuda.slurm
outputs/2025-03-12/10-35-47/.hydra/: config.yaml  hydra.yaml
outputs/2025-03-12/10-36-08/.hydra/: hydra.yaml
outputs/2025-03-12/10-40-13/.hydra/: hydra.yaml
scripts/: README.md  runall.juwels.sh  runall.lumi.sh  sbatch_dir.sh  slurm.juwels.sh  slurm.lumi.sh  slurm_vega_1x4.sh  slurm_vega_hpo_1x4.sh  slurm_vega_hpo_1x4.slurm  slurm_vega_hpo_mini.sh  slurm_vega_hpo_mini.slurm  slurm_vega_mini.sh
scripts/scaling-test/: ddp-1x4.slurm  ddp-2x4.slurm  ddp-4x4.slurm  ddp-8x4.slurm  deepspeed-1x4.slurm  deepspeed-2x4.slurm  deepspeed-4x4.slurm  deepspeed-8x4.slurm  horovod-1x4.slurm  horovod-2x4.slurm  horovod-4x4.slurm  horovod-8x4.slurm
src/itwinai/plugins/hython/: config.py  data.py  hpo.py  trainer.py
src/itwinai/plugins/hython/configuration_files/: calibration.yaml
src/itwinai_hython_plugin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_plugin_import.py
