[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itwinai-hython-plugin"
version = "0.0.1"
description = "Hython plugin for itwinai"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Iacopo Ferrario", email = "IacopoFederico.Ferrario@eurac.edu" }, 
  { name = "Jarl Sondre Sæther", email = "jarl.sondre.saether@cern.ch" },
]
dependencies = [
    "itwinai[torch]",
    "pytest>=8.3.4",
]

[tool.setuptools.packages.find]

# Declare this package as part of the `itwinai.plugins` namespace
where = ["src"]

# Make sure to list all the plugin subfolders here,
# otherwise the plugin may not be installed correctly!
include = [
    "itwinai.plugins.hython",
]

# Ruff configuration: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 95

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
